--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 to assist with the transition to online learning.<br> My responsibilities remained the same as when i was employed full time for the school only now adapting it for online learning so that students could access lessons through the internet.<br>
         </div>
         <!-- Projects -->
-        <div>
-
+        <div class="container-fluid d-flex text-light flex-column">
+            <h2>Projects</h2>
         </div>
         <!-- skills -->
         <div>
@@ -86,13 +86,31 @@
             </div>
         </div>
         <!-- testimonials -->
-        <div class="text-center text-white">
+        <div class="row text-center text-white ">
             <H2>Testimonials</H2>
-            <div class="d-flex flex-column col-2">
+            <div class="d-flex flex-column col-3">
                 <h3>Joel Mukanya</h3>
                 <img class="img-fluid" src="https://i.postimg.cc/C12R1f8G/Joel-Profile.jpg" alt="">
                 <p>Daniel is a very creative, go-getter, and well-behaved student. He does enjoy working with his classmates and works well on his project.
                     He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired as a developer.</p>
+            </div>
+            <div class="d-flex flex-column col-3">
+                <h3>Jeremia Adriano</h3>
+                <img class="img-fluid" src="" alt="">
+                <p>A life long learner and an artist at heart. Daniel always incorporates his ideas in a creative and commendable manner. Communication, reliability and transparency are his most valuable assets and i believe it will contribute towards the success of any project/task thrown at him.
+                </p>
+            </div>
+            <div class="d-flex flex-column col-3">
+                <h3>James A. Harvey</h3>
+                <img class="img-fluid" src="" alt="">
+                <p>The way that Daniel interacts with the world around them is one of creativity, seeking to learn something new and unravel the mysteries of a variety of topics which, although not having any professional experience in, interest them greatly. They are a gentle soul but by no means meek, and the effort they put into their relationships, their work, and their own craft(visual art a chief among them) inspires those around them to do the same.</p>
+            </div>
+            <div class="d-flex flex-column col-3">
+                <h3>Carlisle Riddles</h3>
+                <img class="img-fluid" src="" alt="">
+                <p>
+
+                </p>
             </div>
         </div>
         <!-- Contact -->
