fs, placement/alignment & animation update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="box">
                 <div class="front">
                     <div class="imgContainer">
-                        <img src="https://i.postimg.cc/Pxk01QX4/Daniel.jpg" alt="">
+                        <img class="Daniel" src="https://i.postimg.cc/Pxk01QX4/Daniel.jpg" alt="">
                     </div>
                     <div class="back d-flex flex-column text-center align-items-center justify-content-center">
                         <div>
@@ -55,55 +55,68 @@
     </section>
         <!-- resume -->
         <div class="container-fluid d-flex text-light flex-column">
-            <h1 id="Resume"><u>Resume</u></h1>
-            <p class="lead">
+            <h1><u>Resume</u></h1>
+            <p class="lead fs-4">
                 <strong>Education:</strong><br>
-                <em>Lotus High school</em> - January 2008-December 2013 (admission to bachelors)<br>
+                <em><u>Lotus High school</u></em> - January 2008-December 2013 (admission to bachelors)<br>
                 <br>
                 <strong>Work Experience:</strong><br>
-                <em>St George's Grammar School  Prepatory Art Department</em> Classroom Assistant - July 2017-December 2019<br>
+                <em><u>St George's Grammar School  Prepatory Art Department</u></em> Classroom Assistant - July 2017-December 2019<br>
                 Duties: Setup & preparation of all classes, grade pre R to grade 7, including classroom management.<br> Assisting with planning lessons for each term, study notes and formal assessments for intermediate phase students.<br>
                 <br>
-                <em>St George's Grammar School  Prepatory Art Department</em> Part-time Assistant - March 2020-September 2021<br>
+                <em><u>St George's Grammar School  Prepatory Art Department</u></em> Part-time Assistant - March 2020-September 2021<br>
                 During lockdown of 2020 I was personally requested and employed by the Prepatory Art Teacher at the time; Tami-Lee Kleinsmith
                 to assist with the transition to online learning.<br> My responsibilities remained the same as when i was employed full time for the school only now adapting it for online learning so that students could access lessons through the internet.<br>
         </div>
         <!-- Projects -->
-        <div class="container-fluid d-flex text-light flex-column">
-            <h2>Projects</h2>
+        <div class="container-fluid d-flex text-light text-center row">
+            <h1><u>Projects</u></h1>
+                <p class="lead fs-4">
+                    Here are some Projects I am working on!
+                </p>
+                    <div class="swords_art fs-3 container-fluid d-flex flex-column col-6 text-center">
+                        <h4 class="fs-2">Swords Art</h4>
+                        <a href="https://github.com/Dan1elH3ctor/Portfolio" target="_blank"><img class="img-fluid w-50 pb-3" src="https://i.postimg.cc/FFVJVrRC/banner-with-sword-vector-1502483.jpg" alt=""></a>
+                        <p>github link</p>
+                    </div>
+                    <div class="anime_emporium fs-3 container-fluid d-flex flex-column col-6 text-center">
+                        <h4 class="fs-2">Anime Emporium</h4>
+                        <a href="https://github.com/Dan1elH3ctor/LifeChoices" target="_blank"><img class="img-fluid w-50 my-5 py-5" src="https://i.pinimg.com/originals/dd/c8/86/ddc886fd70cd8e8ddb754dbcfd879aac.gif" alt=""></a>
+                        <p>github link</p>
+                    </div>
         </div>
         <!-- skills -->
-        <div>
-            <h2 class="Skills text-center text-white ">Skills</h2>
+        <div class="p-5">
+            <h1 class="Skills text-center text-white text-decoration-underline ">Skills</h1>
             <div class="skillbar text-light text-center text-nowrap">
-                <div class="HTML5 my-2 ms-2" data-skill="HTML5">HTML5 90%</div>
+                <div class="HTML5 my-2 ms-2 fs-5" data-skill="HTML5">HTML5 90%</div>
             </div>
             <div class="skillbar text-light text-center text-nowrap">
-                <div class="CSS my-2 ms-2" data-skill="CSS">CSS 65%</div>
+                <div class="CSS my-2 ms-2 fs-5" data-skill="CSS">CSS 65%</div>
             </div>
             <div class="skillbar text-light text-center text-nowrap">
-                <div class="Bootstrap my-2 ms-2" data-skill="Bootstrap">Bootstrap 80%</div>
+                <div class="Bootstrap my-2 ms-2 fs-5" data-skill="Bootstrap">Bootstrap 80%</div>
             </div>
         </div>
         <!-- testimonials -->
-        <div class="row text-center text-white ">
-            <H2>Testimonials</H2>
-            <div class="d-flex flex-column col-3">
+        <div class="row text-center text-white">
+            <H1 class=" text-decoration-underline">Testimonials</H1>
+            <div class="d-flex flex-column col-4">
                 <h3>Joel Mukanya</h3>
                 <img class="img-fluid" src="https://i.postimg.cc/C12R1f8G/Joel-Profile.jpg" alt="">
-                <p>Daniel is a very creative, go-getter, and well-behaved student. He does enjoy working with his classmates and works well on his project.
+                <p class="lead fs-5">Daniel is a very creative, go-getter, and well-behaved student. He does enjoy working with his classmates and works well on his project.
                     He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired as a developer.</p>
             </div>
-            <div class="d-flex flex-column col-3">
+            <div class="d-flex flex-column col-4 align-items-center">
                 <h3>Jeremia Adriano</h3>
-                <img class="img-fluid" src="" alt="">
-                <p>A life long learner and an artist at heart. Daniel always incorporates his ideas in a creative and commendable manner. Communication, reliability and transparency are his most valuable assets and i believe it will contribute towards the success of any project/task thrown at him.
+                <img class="img-fluid w-75" src="https://i.postimg.cc/j5LHzGnb/IMG-20221109-WA0006.jpg" alt="">
+                <p class="lead fs-5">A life long learner and an artist at heart. Daniel always incorporates his ideas in a creative and commendable manner. Communication, reliability and transparency are his most valuable assets and i believe it will contribute towards the success of any project/task thrown at him.
                 </p>
             </div>
-            <div class="d-flex flex-column col-3">
+            <div class="d-flex flex-column col-4 align-items-center">
                 <h3>James A. Harvey</h3>
-                <img class="img-fluid" src="" alt="">
-                <p>The way that Daniel interacts with the world around them is one of creativity, seeking to learn something new and unravel the mysteries of a variety of topics which, although not having any professional experience in, interest them greatly. They are a gentle soul but by no means meek, and the effort they put into their relationships, their work, and their own craft(visual art a chief among them) inspires those around them to do the same.</p>
+                <img class="img-fluid w-50" src="https://i.postimg.cc/CLyGqrF3/IMG-20221109-WA0002.jpg" alt="">
+                <p class="lead fs-5">The way that Daniel interacts with the world around them is one of creativity, seeking to learn something new and unravel the mysteries of a variety of topics which, although not having any professional experience in, interest them greatly. They are a gentle soul but by no means meek, and the effort they put into their relationships, their work, and their own craft(visual art a chief among them) inspires those around them to do the same.</p>
             </div>
         </div>
         <!-- Contact -->
@@ -112,7 +125,7 @@
         <form action="https://formspree.io/f/mvoyrloq" method="post" class="container-fluid w-50 mb-2">
             <div>
                 <div>
-                    <div class="row">
+                    <div class="row fs-5">
                         <div class="col-2 flex-column">
                             <p class="fs-6 d-flex text-white"> Do not hesitate to contact via email <br>Or<br>tel:064 5997 0651 </p>
 
