added correct links

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 </p>
                     <div class="swords_art fs-3 container-fluid d-flex flex-column col-6 text-center">
                         <h4 class="fs-2">Swords Art</h4>
-                        <a href="https://github.com/Dan1elH3ctor/Portfolio" target="_blank"><img class="img-fluid w-50 pb-3" src="https://i.postimg.cc/FFVJVrRC/banner-with-sword-vector-1502483.jpg" alt=""></a>
-                        <p>github link</p>
+                        <a href="https://swords-art.netlify.app/" target="_blank"><img class="img-fluid w-50 pb-3" src="https://i.postimg.cc/FFVJVrRC/banner-with-sword-vector-1502483.jpg" alt=""></a>
+                        <a href="https://github.com/Dan1elH3ctor/week2projectparallaxpage.git" target="_blank"><p>github link</p></a>
                     </div>
                     <div class="anime_emporium fs-3 container-fluid d-flex flex-column col-6 text-center">
                         <h4 class="fs-2">Anime Emporium</h4>
-                        <a href="https://github.com/Dan1elH3ctor/LifeChoices" target="_blank"><img class="img-fluid w-50 my-5 py-5" src="https://i.pinimg.com/originals/dd/c8/86/ddc886fd70cd8e8ddb754dbcfd879aac.gif" alt=""></a>
-                        <p>github link</p>
+                        <a href="https://anime-emporium.netlify.app/" target="_blank"><img class="img-fluid w-50 my-5 py-5" src="https://i.pinimg.com/originals/dd/c8/86/ddc886fd70cd8e8ddb754dbcfd879aac.gif" alt=""></a>
+                        <a href="https://github.com/Dan1elH3ctor/Ecommerce-Exercise.git" target="_blank"><p>github link</p></a>
                     </div>
         </div>
         <!-- skills -->
